feat: Assisted (deterministic) triangulation